fixed star alignment

--- a/css/main.scss
+++ b/css/main.scss
@@ -1568,7 +1568,7 @@ section#reviews{
       padding-left: 7%;
     }
 
-    ol li:first-child{
+    >ol>li:first-child{
       padding-left: 7%;
     }
   }
